--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.phuc_long_demo">
+   <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="phuc_long_demo"
         android:icon="@mipmap/ic_launcher">
