--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^2.2.0
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.2.0
   get: ^4.1.4
 
 dev_dependencies:
@@ -43,8 +45,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/icon/
-    - assets/images/milktea/
-    - assets/images/tea/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
